Refatoração de algumas classes e implementação de integração para CreateJobUseCase